# llm-training-camp

./: .gitignore  README.md
ai-translator/: README.md  pyproject.toml
ai-translator/src/: config.yaml  gradio_ui.py  main.py  main2.py
ai-translator/src/config/: base.py
ai-translator/src/model/: __init__.py  base.py
ai-translator/src/parser/: __init__.py  base.py  pdf_parser.py
ai-translator/src/schema/: __init__.py  book.py  content.py  page.py
ai-translator/src/translate/: __init__.py  chain.py  exceptions.py  prompt.py  writer.py
ai-translator/src/utils/: __init__.py  argument_parser.py  logger.py
ai-translator/tests/: The_Old_Man_of_the_Sea_translated.md  The_Old_Man_of_the_Sea_translated_chatglm.md  test_translated.md
booksales-consultant/: README.md  pyproject.toml
booksales-consultant/booksales_consultant/: __init__.py  book_consultant.py  gradio_ui.py  logger.py  prompt.py  shopping_cart.py  ui.py
booksales-consultant/booksales_consultant/utils/: __init__.py
booksales-consultant/jupyter/: RetrievalQA.ipynb  Untitled.ipynb  document_loader.ipynb  document_store.ipynb  faiss_test.ipynb  router.ipynb  shopping_cart.ipynb  startup_gradio.ipynb
booksales-consultant/jupyter/books/: index.faiss  index.pkl
booksales-consultant/resources/: 中国文学.json  中国文学_edited.json  哲学.json  哲学_edited.json  经济学.json  经济学_edited.json  计算机科学.json  计算机科学_edited.json  金融学.json  金融学_edited.json
chatglm-lesson/: interviews_with_tangsengshitu.ipynb  multi_role_play.ipynb
chatglm-lesson/homework1/: characterglm_api_demo_streamlit.py
chatglm-lesson/homework2/: api.py  dialog.json  dialog_12.json  dialog_75.json  homework2.ipynb  homework2.py  (+1 more)
localmodel/: base.py  logger.py  server.py
