[tool.poetry]
name = "ai-translator"
version = "0.1.0"
description = ""
authors = ["denniszhou <21563099@qq.com>"]
readme = "README.md"
packages = [{ include = "ai-translator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.333"
pdfplumber = "^0.10.3"
reportlab = "^4.0.7"
loguru = "^0.7.2"
pandas = "2.1.0"
openai = "^1.2.2"
modelscope = "^1.9.4"
gradio = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
