[tool.poetry]
name = "booksales-consultant"
version = "0.1.0"
description = ""
authors = ["denniszhou <21563099@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.322"
openai = "^0.28.1"
jupyterlab = "^4.0.7"
faiss-cpu = "^1.7.4"
prettyprinter = "^0.18.0"
jq = "^1.6.0"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
