[tool.poetry]
name = "booksales-consultant"
version = "0.1.0"
description = "Book consultant for replying to customer's questions"
authors = ["denniszhou <21563099@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.322"
openai = "^0.28.1"
jupyterlab = "^4.0.7"
faiss-cpu = "^1.7.4"
prettyprinter = "^0.18.0"
jq = "^1.6.0"
tiktoken = "^0.5.1"
gradio = "^3.50.2"
pydantic = "^2.4.2"
loguru = "^0.7.2"
flask = "^3.0.0"
chromadb = "^0.4.15"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
